--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ color: #2495ff !important;
     text-decoration: none !important;
     text-align: center !important;
 }
+#pac-input {
+	background: #fdfdfd url(https://images-2.discordapp.net/.eJwFwe0NgyAQANBdGIC7IseHMzT91QUIEjRRj8CZNG…EgMFES_Dhb_nJmyvrdlZ1P27iI8A.dkdSgMI9w0R9peV9UaDEqJmKQiE?width=40height=40) no-repeat 99% 50%;
+    background-size: 30px;
+}
 body > div.footer > div.mobileads1 {
 	display: block;
 }
@@ -57,6 +61,8 @@ color: black !important;
 }
 input[type="text"], input[type="password"], input[type="email"] {
     width: 300px !important;
+	    height: 30px !important;
+    margin-top: 10px;
 }
 #window {
     color: black !important;
