--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ color: #2495ff !important;
     text-align: center !important;
 }
 #pac-input {
-	background: #fdfdfd url(https://images-2.discordapp.net/.eJwFwe0NgyAQANBdGIC7IseHMzT91QUIEjRRj8CZNG…EgMFES_Dhb_nJmyvrdlZ1P27iI8A.dkdSgMI9w0R9peV9UaDEqJmKQiE?width=40height=40) no-repeat 99% 50%;
+	background: #fdfdfd url(https://images-2.discordapp.net/.eJwFwe0NgyAQANBdGIC7IseHMzT91QUIEjRRj8CZNGnc3ff-6uq7mtUq0sYMsGwjc1_0EO6pFl2Z615S24bOfEASSXk9yikDDEYbXo7IxwkjkkMw1llCP3nEgMFES_Dhb_nJmyvrdlZ1P27iI8A.dkdSgMI9w0R9peV9UaDEqJmKQiE?width=300&height=300) no-repeat 99% 50%;
     background-size: 30px;
 }
 body > div.footer > div.mobileads1 {
