--- a/css/main.css
+++ b/css/main.css
@@ -1556,7 +1556,7 @@ color: #ffed00 !important;
     margin-top: -7%;
 }
 body { position: fixed !important;
-    position: fixed !important;
+    position: initial !important;
     width: 100%;
 	}
 .select-style {
