--- a/css/main.css
+++ b/css/main.css
@@ -795,7 +795,7 @@ blockquote, q {
   content: '';
   content: none; }
 #header {
-    background: rgb(242, 239, 233) !important;
+      background: rgba(255, 255, 255, 0.67) !important;
     border-bottom: 1px solid #b5b5b5;
 }
 ::-webkit-input-placeholder { color: #333333; opacity: 1 !important; } :-moz-placeholder {
